<resources>
    <string name="app_name">NEW Wenn ich du wäre...</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">Game</string>
    <string name="widw">Wenn ich du wäre, würde ich &#160; </string>
    <string name="enter_name">Bitte Namen der Spieler eingeben</string>
    <string name="vorbereitungen">Vorbereitungen</string>
    <string name="zu_wenig_punkte">Tut mir leid, aber du hast zu wenig Punkte!</string>
    <string name="title_activity_start">Start</string>
    <string name="title_activity_anleitung_">Anleitung_Activity</string>
    <string name="leicht">Leicht</string>
    <string name="mittel">Mittel</string>
    <string name="schwer">Schwer</string>
    <string name="addplayers">Spieler Hinzufügen</string>
    <string name="deleteplayers">Alle Spieler löschen</string>
    <string name="runde">Runde</string>
    <string name="start">Start</string>
    <string name="anleitung">Anleitung</string>
    <string name="quit">Beenden</string>
    <string name="easteregg">Herzlichen Glückwunsch! Du hast ein simples aber lustiges Easter Egg gefunden!</string>
    <string name="wanna_quit">Willst du die App wirklich beenden?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="play_lonly">Willst du wirklich alleine Spielen?</string>
    <string name="wanna_main">Willst du das laufende Spiel beenden und zurück zum Hauptbildschirm?</string>
    <string name="lastwinner">Letzter Gewinner:</string>
    <string name="choosecategory">Ort wählen:</string>
    <string name="outside">Draußen</string>
    <string name="party">Party</string>
    <string name="home">Zuhause</string>
    <string name="school">Schule</string>
    <string name="city">Stadt</string>
    <string name="friend">Bei einem Freund</string>
    <string name="full_house">Du hast alle Aufgaben in dieser Kategory mit diesem Schwierigkeitsgrad durch. Sie werden nun neu gemixt und neu
      nochmal durchlaufen.</string>
    <string name="got_it">Alles klar!</string>
    <string name="safety_first">Bitte bringt euch nicht in Situationen, die euch Probleme bereiten, oder Gefährlich für euch und/oder dritte Personen sein könnten.
     Es ist keine Schande zu verlieren. Also hört lieber auf, bevor es zu weit geht. Außerdem verstoßt nicht gegen Gesetze, die dort wo ihr spielt gelten.
        \nFahrt nicht betrunken Auto etc.!
        \nWir haften für keine Art von Schäden.</string>
    <string name="have_fun">Dann viel Spaß und viel Glück! :)</string>
    <string-array name="places">
        <item>Überall</item>
        <item>Draußen</item>
        <item>Party</item>
        <item>Zuhause</item>
        <item>Schule</item>
        <item>Stadt</item>
        
    </string-array>
    <string name="anleitung_forreal">Ihr gebt die nacheinander die Namen der Mitspieler ein und startet das Spiel. Unter der Aufgabe seht ihr wer dran ist
    und somit auch, wer die Aufgabe lösen muss. Ihr könnt vorher aber noch wählen, welchen Schwierigkeitsgrad eure Aufgabe haben soll. Dann habt
     ihr jeweils einen Versuch diese Aufgabe zu lösen. Je nachdem, ob ihr die Aufgabe bestanden oder auch nicht bestanden habt, klickt
     ihr auf den jeweiligen Knopf. Neu bei dieser Version ist, dass es ein Punkte-System gibt. Wer also seine Aufgabe nicht lösen konnte, hat
     nicht direkt verloren. (Wenn ihr wollt, könnt ihr trotzdem nach der Regelung spielen) Ebenfalls neu ist der \"Überspringen\" Knopf, der eine neue Aufgabe !!mit dem selben Schwierigkeitsgrad!! auswählt und dem
     aktuellen Spieler 200 Punkte abzieht. (Sofern du 200 oder mehr Punkte hast) Gewonnen hat der Spieler, der am Ende (ihr könnt euch einigen, wann das Spiel zu Ende sein soll
     z.B. nach einer gewissen Runden- oder Punktzahl) am meisten Punke hat.
        \nViel Spaß!\n
        \nPS: Findest du das Easter Egg im Hauptmenü?</string>
    <string name="ul1">meine Hose runter lassen und mich einmal im Kreis drehen.</string>
    <string name="ul2">einen mindestens 3 Meter langen Moonwalk machen und am Ende laut \"Hihi\" schreien.</string>
    <string name="ul3">meine Schuhe ausziehen und weg werfen.</string>
    <string name="ul4">einen Refrain aus einem beliebigen Lied laut singen.</string>
    <string name="ul5">durch die Gegend laufen und so tun, als wäre ich unter Wasser.</string>
    <string name="ul6">einen 1 Minuten Dialog mit mir selber führen.</string>
    <string name="ul7">dreimal ganz laut \"Nein\" schreien und so tun, als würde ich gehen.</string>
    <string name="ul8">zu einer anderen Person hingehen (Mitspieler nur, wenn keine andere Person anwesend ist),
                   ihr auf den Hintern hauen, \"Hey sexy\" zu ihr sagen und ihr zu zwinkern.</string>
    <string name="ul9">mich auf etwas stellen, und laut ein bereits geschehenes Ereignis Prophezeien.</string>
    <string name="ul10">mich vor etwas oder Jemanden stellen, ihn mit meinem Blick fokussieren und laut und langsam \"Kamehamehaa\" schreien.</string>
    <string name="ul11">Dr. Bibber an einer Person spielen. (Mitspieler nur, wenn keine andere Person anwesend ist)</string>
    <string name="ul12">mir ein \"Kick me!\"-Schild an den Rücken hängen.</string>
    <string name="ul13">die nächsten 10 Minuten nur Hüpfen statt gehen.</string>
    <string name="ul14">mich 30 Sekunden lang über den Boden rollen.</string>
    <string name="ul15">so tun, als ob ich mit einem Hund Gassi gehe.</string>
    <string name="ul16">mir 5 Ohrfeigen verpassen lassen.</string>
    <string name="ul17">einer anderen Person am Arsch riechen und sagen: \"Meiner riecht besser\". (Mitspieler nur, wenn keine andere Person anwesend ist) </string>
    <string name="ul18">5 Purzelbäume machen.</string>
    <string name="ul19">den \"Macarena\"-Tanz tanzen und dazu das Lied singen.</string>
    <string name="ul20">einen 30 Sekunden Monolog über ein bestimmtes Thema halten.</string>
    <string name="ul21">die nächsten 3 Minuten so tun, als wäre der Boden Lava.</string>
    <string name="ul22">zum nächsten Mülleimer gehen und etwas raus holen.</string>
    <string name="ul23">einmal laut schreien.</string>
    <string name="ul24">3 Backpfeifen verteilen. (Nicht an Mitspieler. Wenn kein anderer anwesend ist an mich selber)</string>
    <string name="ul25">mich die nächsten 2 Minuten einfach irgendwo hinlegen, wo ich von vielen gesehen werde.</string>
    <string name="ul26">die nächsten 5 Minuten Barfuß laufen.</string>
    <string name="ul27">5 Räder schlagen.</string>
    <string name="ul28">Joker! Glück gehabt, die Punkte kriegst du geschenkt :D</string>
    <string name="ul29">Joker! Glück gehabt, die Punkte kriegst du geschenkt :D</string>
    <string name="ul30">meinen linken Fuß küssen.</string>
    <string name="ul31">einmal laut aufstoßen.</string>
    <string name="ul32">laute Furzgeräusche machen</string>
    <string name="um1">die nächsten 5 Minuten ausnahmslos die Socken über meinen Händen tragen.</string>
    <string name="um2">einen andere Person am Arm lecken. (Mitspieler nur, wenn keine andere Person anwesend ist)</string>
    <string name="um3">mir 10cm Haar abschneiden. (Wenn es nicht so lang ist, bis zur Kopfhaut.</string>
    <string name="um4">in meiner Nase bohren und es an Jemandem abschmieren. (Nicht an einem Mitspieler. Wenn keine andere Person anwesend ist, an mir selber)</string>
    <string name="um5">aufstehen und laut \”Revolution\” schreien.</string>
    <string name="um6">so tun, als ob ich Musik hören und richtig abgehen.</string>
    <string name="um7">die nächsten 3 Minuten auf Händen UND Füßen laufen</string>
    <string name="um8">einer Person Wasser über den Kopf schütten. (Nicht über einen Mitspieler. Wenn keine andere Person anwesend ist über meinen Kopf)</string>
    <string name="um9">die nächsten 3 Minuten nur Radschläge machen, anstatt zu gehen.</string>
    <string name="um10">meine Socken an meine Ohren hängen, mit meinen Armen einen Rüssel bilden und die nächsten 5 Minuten so tun, als wäre ich eine Elefant.</string>
    <string name="um11">mich 3 Minuten auf einen Mülleimer setzen und wenn, wenn jemand vorbeikommt \”Sorry Bohneneintopf\” sagen.</string>
    <string name="um12">Joker! Glück gehabt, die Punkte kriegst du geschenkt :D</string>
    <string name="um13">Joker! Glück gehabt, die Punkte kriegst du geschenkt :D</string>
    <string name="um14">eine Person am Ohr knabbern. (Keinen Mitspieler)</string>
    <string name="um15">mir 5cm Haar abschneiden. (Wenn es nicht so lang ist, bis zur Kopfhaut.</string>
    <string name="um16">eine Melodie auf meiner Nase spielen.</string>
    <string name="um17">einen Handstand machen und ihn mindestens 15 Sekunden lang halten.</string>
    <string name="um18">mich von anderen schminken lassen und ein Foto davon machen und würde es bis morgen als Whatsapp-Profilbild nehmen. </string>
    <string name="um19">eine Welle auf dem Boden machen.</string>
    <string name="um20">3 einhändige Liegestütze machen.</string>
    <string name="um21">einen 16 - Zeiler freestylen.</string>
    <string name="um22">meine Fußsohle ablecken.</string>
    <string name="um23">mir jetzt kräftig in den Arsch treten lassen.</string>
    <string name="um24">würde ich eine Runde Schere, Stein, Papier spielen und die Runde gewinnen.</string>
    <string name="um25">mit einer Hand einen Fuß festhalten und mit dem anderen Fuß durchspringen.</string>
    <string name="um26">einen Schuh ausziehen und ihn von einem Mitspieler wegwerfen lassen.</string>
    <string name="um27">mein Handy einen Minute lang den anderen Mitspielern geben und ihnen alles entsperren.</string>
    <string name="um28">einem Mitspieler mein Handy geben und ihn einer beliebigen einen beliebigen Text schreiben lassen.</string>
    <string name="um29">die nächsten 5 Minuten nur auf einem Bein hüpfen, statt zu gehen.</string>
    <string name="um30">einen von meinen Mitspielern verfassten Text aufnehmen und als Sprachmemo in einen Chat ihrer Wahl schicken.</string>
    <string name="us1">meinen Finger ablecken und ihn einer anderen Person ins Ohr stecken. (Wenn nur Mitspieler anwesend sind, in mein eigenes Ohr)</string>
    <string name="us2">meinen Finger ablecken und in mein Ohr stecken.</string>
    <string name="us3">die nächsten 5 Minuten Oberkörper frei verbringen. (Frauen dürfen BH anbehalten)</string>
    <string name="us4">sagen, dass ich auf die Toilette muss, kurz raus gehen, mir Wasser auf die Hose schütten, wieder rein kommen und sagen: \"Ups! Zu spät!\"</string>
    <string name="us5">mir 15cm Haar abschneiden. (Wenn es nicht so lang ist, bis zur Kopfhaut.</string>
    <string name="us6">die nächsten 5 Minuten nur in Unterwäsche verbringen.</string>
    <string name="us7">JOKER!! Du Glückspilz! Gönn dir die 100P ;P</string>
    <string name="us8">ein peinliches Foto von mir posten. (Nicht Snapchat)</string>
    <string name="us9">die nächsten 3 Minuten mein Oberteil als Hose tragen und meine Hose oben rum.</string>
    <string name="us10">eine Person dazu bringen, meine nackte Axel zu lecken.</string>
    <string name="us11">die nackte Axel von jemandem lecken.</string>
    <string name="dl1">mich über den Boden rollen.</string>
    <string name="dl2">3 Radschläge machen.</string>
    <string name="dl3">Erde in mein Gesicht schmieren.</string>
    <string name="dm1">Gras essen.</string>
    <string name="dm2">Erde essen.</string>
    <string name="dm3">Auf einen Baum klettern.</string>
    <string name="dm4">mit meinen Händen ein mindestens 20 Zentimeter tiefes Loch graben.</string>
    <string name="dm5">einen Kopfstand machen.</string>
    <string name="dm6">einen Handstand machen.</string>
    <string name="ds1">Erde schniefen.</string>
    <string name="ds2">Erde in meine Socken füllen.</string>
    <string name="ds3">meinen Schuh vergraben.</string>
    <string name="pl1">eine Person von Hinten antanzen. (Keinen Mitspieler)</string>
</resources>