<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/grey_light">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/editText"
        android:layout_marginTop="64dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/addplayers"
        android:id="@+id/button"
        android:layout_below="@+id/editText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_above="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="spiel starten"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/deleteplayers"
        android:id="@+id/deleteButton"
        android:layout_alignTop="@+id/button"
        android:layout_toStartOf="@+id/button"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vorbereitungen"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/spinner"
        android:prompt="@string/choosecategory"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/button2"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosecategory"
        android:id="@+id/placeTextView"
        android:layout_below="@+id/listView"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@+id/editText"
        />


</RelativeLayout>