<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/grey_light">

    <ImageView
        android:layout_width="225dp"
        android:layout_height="212dp"
        android:id="@+id/imageView"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/widw_iconblue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/startTextView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:textSize="40dp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/anleitung"
        android:id="@+id/anleitungTextView"
        android:layout_below="@+id/startTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="40dp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:id="@+id/quitTextView"
        android:layout_marginTop="32dp"
        android:textSize="40dp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:layout_below="@+id/anleitungTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="lol"
        android:id="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"/>
</RelativeLayout>