<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text='Wenn ich du wäre, würde ich ganz laut "Hallo" schreien'
        android:id="@+id/aufgabenTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/grey_dark"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PlayerX"
        android:id="@+id/playerTextView"
        android:layout_below="@+id/aufgabenTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="25dp"/>

    <ImageButton
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:text="Bestanden (+50p)"
        android:id="@+id/buttonY"
        android:background="@drawable/widw_ybtn25"
        android:layout_alignTop="@+id/skipButton"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0000P"
        android:id="@+id/scoreTextView"
        android:textSize="18dp"
        android:layout_below="@+id/playerTextView"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:id="@+id/buttonN"
        android:layout_alignTop="@+id/skipButton"
        android:layout_alignParentStart="true"
        android:background="@drawable/widwnbtn"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonY"
        />

    <ImageButton
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:text="Übersprngen (-200p)"
        android:id="@+id/skipButton"
        android:layout_below="@+id/scoreTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/widwskipbtn"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leicht"
        android:id="@+id/leichtRadioButton"
        android:layout_below="@+id/aufgabenTextView"
        android:layout_marginTop="5dp"
        android:layout_alignStart="@+id/aufgabenTextView" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mittel"
        android:id="@+id/mittelRadioButton"
        android:layout_alignTop="@+id/leichtRadioButton"
        android:layout_alignStart="@+id/skipButton" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schwer"
        android:id="@+id/schwerRadioButton"
        android:layout_alignTop="@+id/mittelRadioButton"
        android:layout_alignStart="@+id/buttonY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/runde"
        android:id="@+id/roundTextView"
        android:textSize="20dp"
        android:layout_marginRight="5dp"
        android:layout_above="@+id/adViewUP"
        android:layout_alignEnd="@+id/aufgabenTextView" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewUP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-1814335808278709/6802197475"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>